提交记录文件内容显示

--- a/src/assets/font_icon/iconfont.css
+++ b/src/assets/font_icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3873189 */
-  src: url('iconfont.woff2?t=1675307776719') format('woff2'),
-       url('iconfont.woff?t=1675307776719') format('woff'),
-       url('iconfont.ttf?t=1675307776719') format('truetype');
+  src: url('iconfont.woff2?t=1676449139439') format('woff2'),
+       url('iconfont.woff?t=1676449139439') format('woff'),
+       url('iconfont.ttf?t=1676449139439') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,126 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fanhui:before {
+  content: "\e615";
+}
+
+.icon-java:before {
+  content: "\e66b";
+}
+
+.icon-ts:before {
+  content: "\e6a3";
+}
+
+.icon-md:before {
+  content: "\e63e";
+}
+
+.icon-cmd:before {
+  content: "\e8aa";
+}
+
+.icon-powershell:before {
+  content: "\e680";
+}
+
+.icon-subscript-2:before {
+  content: "\e781";
+}
+
+.icon-superscript-2:before {
+  content: "\e787";
+}
+
+.icon-align-right:before {
+  content: "\e7f5";
+}
+
+.icon-align-center:before {
+  content: "\e7f6";
+}
+
+.icon-align-left:before {
+  content: "\e7fc";
+}
+
+.icon-link:before {
+  content: "\e891";
+}
+
+.icon-xuanzhong:before {
+  content: "\e606";
+}
+
+.icon-terminal-line:before {
+  content: "\e849";
+}
+
+.icon-align-justify:before {
+  content: "\e61a";
+}
+
+.icon-image:before {
+  content: "\e7de";
+}
+
+.icon-table-2:before {
+  content: "\e7df";
+}
+
+.icon-font-color:before {
+  content: "\e7f8";
+}
+
+.icon-emoji:before {
+  content: "\e6f6";
+}
+
+.icon-list-ordered:before {
+  content: "\e63d";
+}
+
+.icon-indent-increase:before {
+  content: "\e7b9";
+}
+
+.icon-indent-decrease:before {
+  content: "\e735";
+}
+
+.icon-list-check:before {
+  content: "\e737";
+}
+
+.icon-chuangzuo:before {
+  content: "\e8ad";
+}
+
+.icon-double-quotes-l:before {
+  content: "\e8d2";
+}
+
+.icon-bold:before {
+  content: "\e7f7";
+}
+
+.icon-strikethrough:before {
+  content: "\e7f9";
+}
+
+.icon-underline:before {
+  content: "\e7fa";
+}
+
+.icon-italic:before {
+  content: "\e7fb";
+}
+
+.icon-code-view:before {
+  content: "\e7b8";
 }
 
 .icon-delete:before {
@@ -29,11 +149,11 @@
   content: "\e63b";
 }
 
-.icon-YAML:before {
+.icon-yaml:before {
   content: "\e625";
 }
 
-.icon-TXT:before {
+.icon-txt:before {
   content: "\e611";
 }
 
