--- a/src/home/components/Header.scss
+++ b/src/home/components/Header.scss
@@ -14,6 +14,9 @@
             height: var(--xcode-head-height);
             width: 100px;
             margin: 0 20px;
+            &-text{
+                font-size: 30px;
+            }
             img{
                 width: 100%;
                 height: 100%;
