--- a/src/repository/repository/components/RepositoryTable.scss
+++ b/src/repository/repository/components/RepositoryTable.scss
@@ -18,6 +18,8 @@
         }
         .name-text-lock{
             padding: 0 8px;
+            font-weight: 50;
+            font-size: 15px;
         }
         .name-text-type{
             display: inline-block;
