数据备份恢复界面

--- a/src/repository/repository/components/RepositoryAdd.scss
+++ b/src/repository/repository/components/RepositoryAdd.scss
@@ -31,6 +31,12 @@
             }
         }
     }
+    .repository-add-error{
+        color: #ff4d4f;
+    }
+    .repository-add-border{
+        border-color: #ff4d4f;
+    }
 }
 
 .repository-add-user-drop{
