--- a/src/common/btn/Btn.scss
+++ b/src/common/btn/Btn.scss
@@ -50,6 +50,17 @@
     box-shadow: none;
 }
 
+.xcode-btn-text {
+    color: rgba(0,0,0,.85);
+    background: transparent;
+    border-color: transparent;
+    box-shadow: none;
+    padding-top: 5px;
+    &:hover{
+        background: #f4f4f4;
+    }
+}
+
 .xcode-btn-mar{
     margin-right: 15px;
 }
