--- a/src/home/components/HomePage.scss
+++ b/src/home/components/HomePage.scss
@@ -214,7 +214,7 @@
         }
 
 
-        .home-dyna{
+        .home-pull{
             background: #fff;
             padding: 10px;
             min-height: 450px;
