界面优化修改

--- a/src/common/page/Page.scss
+++ b/src/common/page/Page.scss
@@ -13,7 +13,11 @@
           color: var(--tiklab-blue);
         }
     }
+    .xcode-page-icon{
+       padding: 0 5px;
+    }
     .xcode-page-current{
         color: var(--tiklab-blue);
     }
+
 }
