--- a/src/home/components/HomePage.scss
+++ b/src/home/components/HomePage.scss
@@ -200,6 +200,9 @@
                     display: flex;
                     align-items: center;
                 }
+                .newCommit-text-sym{
+                   padding: 0 5px;
+                }
                 .newCommit-text-name{
                     color: #1890ff;
                 }
