--- a/src/setting/backups/components/Backups.scss
+++ b/src/setting/backups/components/Backups.scss
@@ -37,6 +37,13 @@
     .backups-nav-title{
       width: 100px;
     }
+    .backups-input{
+      border: 1px solid #e9e9e9;
+
+    }
+    input::selection {
+      border: 1px solid #e9e9e9;
+    }
   }
 
   .backups-exec{
